--- a/tests/test_configs/app.yaml
+++ b/tests/test_configs/app.yaml
@@ -1,5 +1,5 @@
 receipt:     Oz-Ware Purchase Invoice
-date:        2012-08-06
+date:        "2012-08-06"
 customer:
     first_name:   Dorothy
     family_name:  Gale
